# Q-Sar

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: router.rs
src/api/rest/: openapi.yaml
src/types/: http_method.rs  http_response.rs  http_type.rs  mod.rs
src/utils/: logger.rs
